# Pactum-AI

./: README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py  db.py  db_init.sql
