[project]
name = "pactum-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "autogenstudio>=0.1.5",
    "crewai>=1.6.1",
    "fastapi>=0.124.4",
    "google-adk>=1.18.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "uvicorn>=0.38.0",
]
